fix() small icon is 8px, add more icon sizes

--- a/src/components/ae-icons-component/ae-icons-component.css
+++ b/src/components/ae-icons-component/ae-icons-component.css
@@ -9,7 +9,7 @@
 
 * {
   --color: pink;
-  --ae-icon-size: 32px;
+  --ae-icon-size: 8px;
 }
 
 ion-icon {
@@ -20,87 +20,112 @@ ion-icon {
 
 ion-icon.ae16 {
   color: var(--color);
-  font-size: calc(var(--ae-icon-size) / 2);
+  font-size: calc(var(--ae-icon-size) * 2);
 }
 
 ion-icon.ae24 {
   color: var(--color);
-  font-size: calc(var(--ae-icon-size) * 2);
+  font-size: calc(var(--ae-icon-size) * 3);
+}
+
+ion-icon.ae32 {
+  color: var(--color);
+  font-size: calc(var(--ae-icon-size) * 4);
 }
 
 ion-icon.ae40 {
   color: var(--color);
-  font-size: calc(var(--ae-icon-size) * 3);
+  font-size: calc(var(--ae-icon-size) * 5);
 }
 
 ion-icon.ae48 {
   color: var(--color);
-  font-size: calc(var(--ae-icon-size) * 4);
+  font-size: calc(var(--ae-icon-size) * 6);
 }
 
 ion-icon.ae56 {
   color: var(--color);
-  font-size: calc(var(--ae-icon-size) * 4);
+  font-size: calc(var(--ae-icon-size) * 7);
 }
 
 ion-icon.ae64 {
   color: var(--color);
-  font-size: calc(var(--ae-icon-size) * 4);
+  font-size: calc(var(--ae-icon-size) * 8);
 }
 
 ion-icon.ae72 {
   color: var(--color);
-  font-size: calc(var(--ae-icon-size) * 4);
+  font-size: calc(var(--ae-icon-size) * 9);
 }
 
 ion-icon.ae80 {
   color: var(--color);
-  font-size: calc(var(--ae-icon-size) * 4);
+  font-size: calc(var(--ae-icon-size) * 10);
 }
 
 ion-icon.ae88 {
   color: var(--color);
-  font-size: calc(var(--ae-icon-size) * 4);
+  font-size: calc(var(--ae-icon-size) * 11);
 }
 
 ion-icon.ae96 {
   color: var(--color);
-  font-size: calc(var(--ae-icon-size) * 4);
+  font-size: calc(var(--ae-icon-size) * 12);
 }
 
 ion-icon.ae104 {
   color: var(--color);
-  font-size: calc(var(--ae-icon-size) * 4);
+  font-size: calc(var(--ae-icon-size) * 13);
 }
 
 ion-icon.ae112 {
   color: var(--color);
-  font-size: calc(var(--ae-icon-size) * 4);
+  font-size: calc(var(--ae-icon-size) * 14);
 }
 
 ion-icon.ae120 {
   color: var(--color);
-  font-size: calc(var(--ae-icon-size) * 4);
+  font-size: calc(var(--ae-icon-size) * 15);
 }
 
 ion-icon.ae128 {
   color: var(--color);
-  font-size: calc(var(--ae-icon-size) * 4);
+  font-size: calc(var(--ae-icon-size) * 16);
 }
 
 ion-icon.ae192 {
   color: var(--color);
-  font-size: calc(var(--ae-icon-size) * 4);
+  font-size: calc(var(--ae-icon-size) * 24);
 }
 
 ion-icon.ae256 {
   color: var(--color);
-  font-size: calc(var(--ae-icon-size) * 4);
+  font-size: calc(var(--ae-icon-size) * 32);
+}
+
+ion-icon.ae320 {
+  color: var(--color);
+  font-size: calc(var(--ae-icon-size) * 40);
+}
+
+ion-icon.ae384 {
+  color: var(--color);
+  font-size: calc(var(--ae-icon-size) * 48);
+}
+
+ion-icon.ae448 {
+  color: var(--color);
+  font-size: calc(var(--ae-icon-size) * 56);
 }
 
 ion-icon.ae512 {
   color: var(--color);
-  font-size: calc(var(--ae-icon-size) * 4);
+  font-size: calc(var(--ae-icon-size) * 64);
+}
+
+ion-icon.ae1024 {
+  color: var(--color);
+  font-size: calc(var(--ae-icon-size) * 128);
 }
 
 ion-icon:hover {
