fix (css) move styles to assets/aestyles.css

--- a/src/assets/aestyles.css
+++ b/src/assets/aestyles.css
@@ -1,10 +1,17 @@
+div.aeicons-scroll, body {
+  background-color: lightyellow;
+  width: 100vw;
+  height: 800px;
+  overflow: scroll;
+}
+
 .container {
   display: grid;
   grid-template-columns: 40px 75px 40px;
   grid-template-rows: 40px;
   align-items: center;
   justify-items: center;
-  }
+}
 
   ion-icon:hover {
     cursor: pointer;
