--- a/src/assets/aestyles.css
+++ b/src/assets/aestyles.css
@@ -5,14 +5,10 @@ div.aeicons-scroll, body {
   overflow: scroll;
 }
 
-.container {
+div.container {
   display: grid;
   grid-template-columns: 40px 75px 40px;
   grid-template-rows: 40px;
   align-items: center;
   justify-items: center;
-}
-
-  ion-icon:hover {
-    cursor: pointer;
 }
